更新一点个人信息

--- a/html/zh_index.html
+++ b/html/zh_index.html
@@ -30,28 +30,30 @@
         <td align="left">
           <p>
             头像这边就暂时放一只可可爱爱的猫猫吧<br />
-            华北电力大学本科生<br />
-            华电路689号<br />
-            中国，保定<br /> 
-            E-mail: <a href="mailto:220191110505@ncepu.edu.cn">220191110505@ncepu.edu.cn</a>
+            科研助理<br />
+            上海科技大学<br/>
+            华夏中路393号<br />
+            上海，浦东新区<br /> 
+            E-mail: <a href="mailto:18769939178@163.com">18769939178@163.com</a>
           </p>
         </td>
       </tr>
     </table>
     <h2>关于我</h2>
-      <p>我现在是一个就读于华北电力大学自动化系测控技术与仪器专业的本科生，这是我的个人主页，很多地方都还在搭建，不过目前来说还是可以看到一些效果的<br/>
+      <p>我是一名科研助理，工作于上海科技大学信息学院，这是我的个人主页，很多地方都还在搭建，不过目前来说还是可以看到一些效果的<br/>
       我本人喜欢机器人、计算机视觉方面的技术，对这方面非常感兴趣，在本科阶段做过诸多相关的项目与竞赛，积累来不少经验，希望可以在研究生期间发表自己的学术见解</p>
     <h2>研究情况</h2>
       <p>我的研究兴趣包括：</p>
       <ul>
-        <li><p>SLAM</p></li>
+        <li><p>三维感知</p></li>
+        <li><p>多模态学习</p></li>
         <li><p>计算机视觉</p></li>
       </ul>
       <h3>当前工作</h3>
         <ul>
-          <li><p>尝试做一些没什么用但是可以练手的大创和竞赛</p></li>
-          <li><p>钻研一下论文，并且尝试复现（虽然经常性不知道怎么复现，论文也读不懂）</p></li>
-          <li><p>写一下毕设</p></li>
+          <li><p>参与一项多模态三维感知的项目</p></li>
+          <li><p>继续看论文</p></li>
+          <li><p>敲代码</p></li>
         </ul>
 
       <h3>在审文章</h3>
