--- a/index.html
+++ b/index.html
@@ -30,21 +30,22 @@
         <td align="left">
           <p>
             Let's put a cute and adorable cat image on the avatar for now,<br />
-            Undergraduate Student,<br />
-            NCEPU(North China Electric Power University),<br />
-            No. 689 Huadian Street, <br />
-            Baoding, China <br /> 
-            E-mail: <a href="mailto:220191110505@ncepu.edu.cn">220191110505@ncepu.edu.cn</a>
+            Research Assistant,<br />
+            ShanghaiTech University,<br />
+            No. 393 Middle Huaxia Road, <br />
+            Shanghai, China <br /> 
+            E-mail: <a href="mailto:18769939178@163.com">18769939178@163.com</a>
           </p>
         </td>
       </tr>
     </table>
     <h2>About me</h2>
-      <p>I am an undergraduate student majoring in Measurement and Control Technology and Instruments in the Department of Automation, North China Electric Power University.</p>
+      <p>I am a research assistant working in the School of Information Science and Technology, ShanghaiTech University.</p>
     <h2>Research</h2>
       <p>My research interests include: </p>
       <ul>
-        <li><p>SLAM</p></li>
+        <li><p>3D Perception</p></li>
+        <li><p>MultiModel Learning</p></li>
         <li><p>Computer Vision</p></li>
       </ul>
       <h3>Current work</h3>
